--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
         </a>
 
         <a href="https://ai-drug-analysis-randomforest-v10-6lstxt3ksps9cohbh8ffft.streamlit.app/" class="btn" target="_blank">
-            <span>🧬</span> AI大模型-随机森林 (Random Forest)
+            <span>🧬</span> Random Forest
         </a>
         
-        <a href="https://www.cd120.com/index.html" class="btn" target="_blank">
-            <span>🐱</span> 四川大学华西医院
+        <a href="https://synergyfinder.aittokallio.group/2026020507153416634/" class="btn" target="_blank">
+            <span>🐱</span> SynergyFinder
         </a>
         
         <a href="https://chat.deepseek.com/" class="btn" target="_blank">
@@ -202,3 +202,4 @@
     </script>
 </body>
 </html>
+
