--- a/index.html
+++ b/index.html
@@ -179,7 +179,10 @@
             <span>🤖</span> Deepseek
         </a>
 
-
+        <a href="https://github.com/xfbai1840-cool/Discovery_start-page/raw/refs/heads/main/Discovery%20lab_finance.exe" class="btn" download>
+            <span>💰</span> 下载财务管理系统 (.exe)
+        </a>   
+        
         <div class="footer">
             Targeting Viral RNA with Small Molecules
         </div>
@@ -202,4 +205,5 @@
     </script>
 </body>
 </html>
+
 
