--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </a>
         
         <a href="https://chat.deepseek.com/" class="btn" target="_blank">
-            <span>🤖</span> Deepseek
+            <span>🤖</span> DeepSeek
         </a>
 
         <a href="https://github.com/xfbai1840-cool/Discovery_start-page/raw/refs/heads/main/Discovery%20lab_finance.exe" class="btn" download>
